# dict

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  flake.nix  pyproject.toml
dict/: __init__.py  app.py  config.py  dictionary.py  file_picker.py  list_filter.py  main.py  player.py  settings.py  text.py  translate_config.py
dict/db/: __init__.py  engine.py  models.py
dict/utils/: __init__.py  files.py  timer.py
include/: filter.hpp
scripts/: dict-reload
src/: filter.cpp  main.cpp
