[tool.poetry]
name = "dict"
version = "0.1.0"
description = ""
authors = ["Alex Fernandes Neves <alexfneves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^1.0.0"
click = "^8.1.7"
logging = "^0.4.9.6"
textual-dev = "^1.7.0"
babel = "^2.16.0"
tomli-w = "^1.1.0"
pydantic = "^2.10.4"
textual-slider = "^0.1.2"
pygame = "^2.6.1"

[tool.poetry.scripts]
dict = "dict.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true

